recursion.cons.lessons.recursion.cons.Min.scala.error
min:5: error: reassignment to val
      list=list.tail
          ^min:6: error: value head_= is not a member of List[Char]
      list.head=x
           ^min:13: error: type mismatch;
 found   : List[Int]
 required: List[Char]
    return(min(compare(l)))
                       ^min:13: error: type mismatch;
 found   : List[Char]
 required: List[Int]
    return(min(compare(l)))
                      ^